fix: align drop zone footer

--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -30,7 +30,6 @@
 }
 
 .container {
-	position: relative;
 	padding: 24px 24px 20px;
 	pointer-events: all;
 	border-radius: 8px;
